feat: add streaming & ws
